--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
                <div class="features-card flex">
-                <img src="Usability-hub-clone/images/asset 14.svg" alt="">
+                <img src="usability-hub-clone assest 14.svg" alt="">
                 <h3>First click tests</h3>
                 <p>Test interaction with first click and navigation tests.</p>
                 <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-arrow-right-long"></i></a>     
